# ONT-SMA-seq

./: .gitignore  CLAUDE.md  DIAGRAMS.md  LICENSE  PIPELINE_SUMMARY.md  README.md  SUMMARY.md  TESTING.md  TEST_RESULTS.md  WORKFLOW.md  config.yml  ingest.py  inputInit.py  mkdb.py  overhaul.md  pyproject.toml  pytest.ini  requirements.txt  run_test.sh  test_e2e.py  test_pipeline.py  test_setup.py
.github/: copilot-instructions.md
docs/auto_visualizations/: auto_visualization_index.html  auto_visualization_index.md  manifest.json
docs/plans/: 2025-01-30-unified-database-implementation.md  2025-01-30-unified-nanopore-database-design.md  2026-02-14-barcode-calibration-design.md  (+13 more)
env/: env.yml
lib/: __init__.py  db_lookups.py  db_ops.py  db_schema.py
tests/: __init__.py  conftest.py  test_align.py  test_api.py  test_auto_refs.py  test_barcodes.py  test_calibrate_export.py  test_calibrate_integration.py  test_cli.py  test_comparison.py  test_config_gen.py  test_config_store.py  test_confusion.py  test_construct.py  test_construct_wizard.py  test_discover.py  test_distributions.py  test_export.py  test_ingest.py  test_inputInit.py  test_integration.py  test_merge.py  test_minknow_import.py  test_mkdb.py  test_mkrefs.py  test_prepare.py  test_prepare_integration.py  test_qc.py  test_report.py  test_sample_sheet.py  test_separation.py  test_signal.py  test_sma_basecall.py  test_sma_init.py  test_sma_merge_basecall.py  test_sma_merge_cli.py  test_sma_merge_discover.py  test_sma_merge_integration.py  test_sma_merge_models.py  test_sma_merge_subsample.py  (+6 more)
(+8 files in other folders)
